[gd_scene load_steps=42 format=3 uid="uid://bpps4qfcgdytt"]

[ext_resource type="Script" uid="uid://diof0frrpm0jb" path="res://barkley2/autoloads/debug.gd" id="1_jshnt"]
[ext_resource type="Theme" uid="uid://dbeg3k6es8t46" path="res://barkley2/resources/Debug_theme.tres" id="2_pawx4"]
[ext_resource type="Script" uid="uid://1p2a3mchu1cr" path="res://barkley2/resources/B2_Debug/player_data_screen.gd" id="3_vdeye"]
[ext_resource type="FontFile" uid="uid://c5asr1c5g1w6h" path="res://barkley2/resources/fonts/fn_small.tres" id="4_coofk"]
[ext_resource type="Script" uid="uid://k67fiie877xd" path="res://barkley2/resources/B2_Debug/quest_checker.gd" id="4_ecn0k"]
[ext_resource type="FontFile" uid="uid://bq5ct8srd86o6" path="res://barkley2/resources/fonts/fn5o.tres" id="5_iquyo"]
[ext_resource type="FontFile" uid="uid://cbgm2fhhwo0ld" path="res://barkley2/resources/fonts/fn2.tres" id="7_hkl2t"]
[ext_resource type="Script" uid="uid://yai8fhb612w6" path="res://barkley2/resources/B2_Debug/teleport_window.gd" id="8_ir2hf"]
[ext_resource type="Script" uid="uid://s0a13i5ygcc7" path="res://barkley2/resources/B2_Debug/input_checker.gd" id="9_lsfsp"]
[ext_resource type="FontFile" uid="uid://bmt3s8i84e3xl" path="res://barkley2/resources/fonts/fn1.tres" id="10_fcqti"]
[ext_resource type="Texture2D" uid="uid://dce28vp8s5lq0" path="res://barkley2/assets/sTitle/gamepad/sXBOXButtons_0.png" id="11_hgrbu"]
[ext_resource type="Texture2D" uid="uid://c8wesb0pfj4af" path="res://barkley2/assets/sTitle/gamepad/sXBOXButtons_1.png" id="12_27myr"]
[ext_resource type="Texture2D" uid="uid://c03fdfeeowd50" path="res://barkley2/assets/sTitle/gamepad/sXBOXButtons_2.png" id="13_qyn30"]
[ext_resource type="Texture2D" uid="uid://ba2gaab04fsiv" path="res://barkley2/assets/sTitle/gamepad/sXBOXButtons_3.png" id="14_x2v0w"]
[ext_resource type="Texture2D" uid="uid://c4034wopodaod" path="res://barkley2/assets/sTitle/gamepad/sXBOXButtons_4.png" id="15_u28q3"]
[ext_resource type="Texture2D" uid="uid://d18o3lr8ogvam" path="res://barkley2/assets/sTitle/gamepad/sXBOXButtons_5.png" id="16_38kdx"]
[ext_resource type="Texture2D" uid="uid://gqr2u8rlvmxd" path="res://barkley2/assets/sTitle/gamepad/sXBOXButtons_6.png" id="17_tvar4"]
[ext_resource type="Texture2D" uid="uid://6uu3umw2hhk2" path="res://barkley2/assets/sTitle/gamepad/sXBOXButtons_10.png" id="18_nykp6"]
[ext_resource type="Texture2D" uid="uid://bum76micvbuim" path="res://barkley2/assets/sTitle/gamepad/sXBOXButtons_11.png" id="19_mubt8"]
[ext_resource type="Texture2D" uid="uid://cogk11rls42cp" path="res://barkley2/assets/sTitle/gamepad/sXBOXButtons_7.png" id="20_2nwji"]
[ext_resource type="Texture2D" uid="uid://bfonogro044cr" path="res://barkley2/assets/sTitle/gamepad/sXBOXButtons_8.png" id="21_d8etw"]
[ext_resource type="Texture2D" uid="uid://cvd42ksmkebf8" path="res://barkley2/assets/sTitle/gamepad/sXBOXButtons_9.png" id="22_yvkhc"]
[ext_resource type="Texture2D" uid="uid://4j6nyjcjxadc" path="res://barkley2/assets/sTitle/gamepad/sXBOXButtons_12.png" id="23_hnck4"]
[ext_resource type="Texture2D" uid="uid://cygspyk2c4uau" path="res://barkley2/assets/sTitle/gamepad/sXBOXButtons_13.png" id="24_26ris"]
[ext_resource type="Texture2D" uid="uid://dej34worj0txu" path="res://barkley2/assets/sTitle/gamepad/sXBOXButtons_14.png" id="25_nm5g3"]
[ext_resource type="Texture2D" uid="uid://dt1gao1p1uu0d" path="res://barkley2/assets/sTitle/gamepad/sXBOXButtons_15.png" id="26_13kru"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ssblh"]
bg_color = Color(0, 0, 0, 0.75)

[sub_resource type="LabelSettings" id="LabelSettings_dvnvw"]
line_spacing = -1.0
font = ExtResource("4_coofk")
font_color = Color(1, 1, 0.415686, 1)
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eevgy"]
bg_color = Color(0.526, 0.649, 0.377, 0.14)

[sub_resource type="GDScript" id="GDScript_wo71n"]
script/source = "extends HBoxContainer

@onready var current: Label = $current
@onready var plus: Button = $plus
@onready var minus: Button = $minus

func _ready() -> void:
	_on_visibility_changed()
	
func _physics_process(_delta: float) -> void:
	current.text = \"Money: \" + str( B2_Playerdata.Quest(\"money\") )
	
func _on_visibility_changed() -> void:
	# avoid unnecessary processing
	set_physics_process( is_visible_in_tree() )
	
func _on_plus_pressed() -> void:
	B2_Database.money_change( +100 )

func _on_minus_pressed() -> void:
	B2_Database.money_change( -100 )
"

[sub_resource type="GDScript" id="GDScript_qogtn"]
script/source = "extends HBoxContainer

@onready var get_app: Button = $get_app

func _on_get_app_pressed() -> void:
	modulate = Color.DARK_BLUE
	
	get_app.disabled = true
	B2_Map.gain_map( \"Necron 7 - 666th Floor\" )
	B2_Map.gain_map( \"Sewers Floor 1\" )
	B2_Map.gain_map( \"Tír na nÓg\" )
	B2_Map.gain_map( \"Sewers Floor 2\" )
	B2_Map.gain_map( \"The Eastelands\" )
"

[sub_resource type="GDScript" id="GDScript_vss7c"]
script/source = "extends HBoxContainer

@onready var get_app: Button = $get_app

func _on_get_app_pressed() -> void:
	modulate = Color.DARK_GREEN
	
	get_app.disabled = true
	
	for n in B2_Note.NOTES.data.keys():
		B2_Note.take_note( n )
"

[sub_resource type="GDScript" id="GDScript_uvrvr"]
script/source = "extends VBoxContainer

@onready var time_raw: 		Label = $time_raw
@onready var time_get: 		Label = $time_get
@onready var time_form: 	Label = $time_form
@onready var time_gate: 	Label = $time_gate
@onready var time_events: 	Label = $time_events

@onready var line_edit: LineEdit = $HBoxContainer/LineEdit

func _physics_process(_delta: float) -> void:
	time_raw.text 		= \"Time Raw: \" + str( B2_Config.get_user_save_data(\"clock.time\", 0.0) )
	time_get.text		= \"Time Get: \" + str( B2_ClockTime.time_get() )
	time_form.text 		= \"Time Form: \" + B2_ClockTime.time_display()
	time_gate.text 		= \"Time Gate: \" + str( B2_Config.get_user_save_data(\"clock.gate\", 0.0) )
	
	time_events.text 	= \"Time Event:\\n\"
	
	## Error handling
	if B2_Config.get_user_save_data(\"clock.event\", Array() ) is not Array:
		return
	
	for e : Array in B2_Config.get_user_save_data(\"clock.event\", Array() ):
		time_events.text += \" * \" + str( e ) + \"\\n\"


func _on_line_edit_text_submitted(new_text: String) -> void:
	var time := float( new_text )
	time = clampf( time, 0, B2_ClockTime.CLOCK_MAX )
	line_edit.text = str(time)
	B2_ClockTime.time_set( time )

func _on_set_btn_pressed() -> void:
	_on_line_edit_text_submitted( line_edit.text )
"

[sub_resource type="LabelSettings" id="LabelSettings_qcrcr"]
font = ExtResource("4_coofk")
font_color = Color(0.427451, 1, 1, 1)

[sub_resource type="GDScript" id="GDScript_6vf7p"]
script/source = "extends HBoxContainer

func _ready() -> void:
	pass

func _on_stat_btn_pressed() -> void:
	## DEBUG
	var items := B2_Database.items.keys()
	items.shuffle()
	
	for item in items:
		B2_Item.gain_item( item, randi_range(1,99) )
		if B2_Item.get_items().size() > 4:
			break
"

[sub_resource type="GDScript" id="GDScript_jyr1r"]
script/source = "extends HBoxContainer


func _on_g_btn_pressed() -> void:
	B2_Playerdata.Stat( B2_Playerdata.STAT_BASE_GUTS, B2_Playerdata.Stat(B2_Playerdata.STAT_BASE_GUTS) + randi_range(-3, 3) )

func _on_l_btn_pressed() -> void:
	B2_Playerdata.Stat( B2_Playerdata.STAT_BASE_LUCK, B2_Playerdata.Stat(B2_Playerdata.STAT_BASE_LUCK) + randi_range(-3, 3) )

func _on_a_btn_pressed() -> void:
	B2_Playerdata.Stat( B2_Playerdata.STAT_BASE_AGILE, B2_Playerdata.Stat(B2_Playerdata.STAT_BASE_AGILE) + randi_range(-3, 3) )

func _on_m_btn_pressed() -> void:
	B2_Playerdata.Stat( B2_Playerdata.STAT_BASE_MIGHT, B2_Playerdata.Stat(B2_Playerdata.STAT_BASE_MIGHT) + randi_range(-3, 3) )

func _on_p_btn_pressed() -> void:
	B2_Playerdata.Stat( B2_Playerdata.STAT_BASE_PIETY, B2_Playerdata.Stat(B2_Playerdata.STAT_BASE_PIETY) + randi_range(-3, 3) )
"

[sub_resource type="GDScript" id="GDScript_ikmou"]
script/source = "extends HBoxContainer

@onready var cam_btn: Button = $\"../camera_data/cam_btn\"

func _ready() -> void:
	cam_btn.toggle_mode = true
	cam_btn.button_pressed = B2_Debug.show_camera_debug_data

func _on_cam_btn_pressed() -> void:
	B2_Debug.show_camera_debug_data = cam_btn.button_pressed
"

[sub_resource type="GDScript" id="GDScript_tvo8j"]
script/source = "extends HBoxContainer

@onready var play_col_btn: Button = $play_col_btn

func _ready() -> void:
	play_col_btn.toggle_mode = true
	play_col_btn.button_pressed = B2_Debug.can_disable_player_col

func _on_cam_btn_pressed() -> void:
	B2_Debug.can_disable_player_col = play_col_btn.button_pressed
"

[sub_resource type="GDScript" id="GDScript_sww13"]
resource_name = "gun_gen"
script/source = "extends Button
@export var bandolier := true ## Gen gun to bandolier.

func _on_pressed() -> void:
	if bandolier:
		B2_Gun.add_gun_to_bandolier()
	else:
		B2_Gun.add_gun_to_gunbag()
	B2_Sound.play_pick( B2_Gun.get_current_gun().get_swap_sound() )
	print(\"New gun generated! - %s\" % B2_Gun.get_current_gun().get_full_name() )
"

[sub_resource type="LabelSettings" id="LabelSettings_2n5ny"]
font = ExtResource("10_fcqti")

[sub_resource type="LabelSettings" id="LabelSettings_uokvk"]
font = ExtResource("5_iquyo")

[node name="b2_debug" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_jshnt")

[node name="player_data" type="ScrollContainer" parent="."]
visible = false
custom_minimum_size = Vector2(256, 240)
offset_right = 200.0
offset_bottom = 240.0
theme = ExtResource("2_pawx4")
theme_override_styles/panel = SubResource("StyleBoxFlat_ssblh")
script = ExtResource("3_vdeye")

[node name="choices" type="VBoxContainer" parent="player_data"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="player_data/choices"]
layout_mode = 2

[node name="title" type="Label" parent="player_data/choices/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Player's data"

[node name="data" type="Label" parent="player_data/choices/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "PLACEHOLDER
					PLACE"
label_settings = SubResource("LabelSettings_dvnvw")
tab_stops = PackedFloat32Array(10)

[node name="player_vars" type="ScrollContainer" parent="."]
visible = false
custom_minimum_size = Vector2(150, 0)
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 8
theme = ExtResource("2_pawx4")
theme_override_styles/panel = SubResource("StyleBoxFlat_eevgy")

[node name="MarginContainer" type="MarginContainer" parent="player_vars"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="player_vars/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="teleport_btn" type="Button" parent="player_vars/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Teleport!"

[node name="money" type="HBoxContainer" parent="player_vars/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1
script = SubResource("GDScript_wo71n")

[node name="current" type="Label" parent="player_vars/MarginContainer/VBoxContainer/money"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 3

[node name="plus" type="Button" parent="player_vars/MarginContainer/VBoxContainer/money"]
custom_minimum_size = Vector2(32, 16)
layout_mode = 2
text = "+100"

[node name="minus" type="Button" parent="player_vars/MarginContainer/VBoxContainer/money"]
custom_minimum_size = Vector2(32, 16)
layout_mode = 2
text = "-100"

[node name="maps" type="HBoxContainer" parent="player_vars/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1
script = SubResource("GDScript_qogtn")

[node name="map_lbl" type="Label" parent="player_vars/MarginContainer/VBoxContainer/maps"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Get all maps!"
vertical_alignment = 1

[node name="get_app" type="Button" parent="player_vars/MarginContainer/VBoxContainer/maps"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
text = "Get'em!"

[node name="notes" type="HBoxContainer" parent="player_vars/MarginContainer/VBoxContainer"]
layout_mode = 2
script = SubResource("GDScript_vss7c")

[node name="note_lbl" type="Label" parent="player_vars/MarginContainer/VBoxContainer/notes"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Get all notes!"
vertical_alignment = 1

[node name="get_app" type="Button" parent="player_vars/MarginContainer/VBoxContainer/notes"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
text = "Get'em!"

[node name="time" type="VBoxContainer" parent="player_vars/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0
script = SubResource("GDScript_uvrvr")

[node name="time_raw" type="Label" parent="player_vars/MarginContainer/VBoxContainer/time"]
layout_mode = 2
text = "Time Raw: 000000"
label_settings = SubResource("LabelSettings_qcrcr")

[node name="time_get" type="Label" parent="player_vars/MarginContainer/VBoxContainer/time"]
layout_mode = 2
text = "Time Raw: 000000"
label_settings = SubResource("LabelSettings_qcrcr")

[node name="time_form" type="Label" parent="player_vars/MarginContainer/VBoxContainer/time"]
layout_mode = 2
text = "Time Form: 000000"
label_settings = SubResource("LabelSettings_qcrcr")

[node name="time_gate" type="Label" parent="player_vars/MarginContainer/VBoxContainer/time"]
layout_mode = 2
text = "Time Gate: 000000"
label_settings = SubResource("LabelSettings_qcrcr")

[node name="time_events" type="Label" parent="player_vars/MarginContainer/VBoxContainer/time"]
layout_mode = 2
text = "Time Event:
		PLACEHOLDER"
label_settings = SubResource("LabelSettings_qcrcr")
autowrap_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="player_vars/MarginContainer/VBoxContainer/time"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="player_vars/MarginContainer/VBoxContainer/time/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_iquyo")
placeholder_text = "Change time"

[node name="set_btn" type="Button" parent="player_vars/MarginContainer/VBoxContainer/time/HBoxContainer"]
layout_mode = 2
text = "SET"

[node name="items" type="HBoxContainer" parent="player_vars/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
alignment = 1
script = SubResource("GDScript_6vf7p")

[node name="item_btn" type="Button" parent="player_vars/MarginContainer/VBoxContainer/items"]
layout_mode = 2
text = "+5 random items"

[node name="stat" type="HBoxContainer" parent="player_vars/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_constants/separation = 2
script = SubResource("GDScript_jyr1r")

[node name="s_lbl" type="Label" parent="player_vars/MarginContainer/VBoxContainer/stat"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rand. Stat"

[node name="g_btn" type="Button" parent="player_vars/MarginContainer/VBoxContainer/stat"]
layout_mode = 2
text = "G"

[node name="l_btn" type="Button" parent="player_vars/MarginContainer/VBoxContainer/stat"]
layout_mode = 2
text = "L"

[node name="a_btn" type="Button" parent="player_vars/MarginContainer/VBoxContainer/stat"]
layout_mode = 2
text = "A"

[node name="m_btn" type="Button" parent="player_vars/MarginContainer/VBoxContainer/stat"]
layout_mode = 2
text = "M"

[node name="p_btn" type="Button" parent="player_vars/MarginContainer/VBoxContainer/stat"]
layout_mode = 2
text = "P"

[node name="camera_data" type="HBoxContainer" parent="player_vars/MarginContainer/VBoxContainer"]
layout_mode = 2
script = SubResource("GDScript_ikmou")

[node name="Label" type="Label" parent="player_vars/MarginContainer/VBoxContainer/camera_data"]
layout_mode = 2
text = "Show cam data"

[node name="cam_btn" type="Button" parent="player_vars/MarginContainer/VBoxContainer/camera_data"]
layout_mode = 2
size_flags_horizontal = 3
text = "Toggle"

[node name="player_dis_col" type="HBoxContainer" parent="player_vars/MarginContainer/VBoxContainer"]
layout_mode = 2
script = SubResource("GDScript_tvo8j")

[node name="Label" type="Label" parent="player_vars/MarginContainer/VBoxContainer/player_dis_col"]
layout_mode = 2
text = "Can disable 
Player collision (F4)"

[node name="play_col_btn" type="Button" parent="player_vars/MarginContainer/VBoxContainer/player_dis_col"]
layout_mode = 2
size_flags_horizontal = 3
text = "Toggle"

[node name="gun_gen" type="Button" parent="player_vars/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Generate a random weapon (Bando)"
script = SubResource("GDScript_sww13")

[node name="gun_gen2" type="Button" parent="player_vars/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Generate a random weapon (Gunbag)"
script = SubResource("GDScript_sww13")
bandolier = false

[node name="AcceptDialog" type="AcceptDialog" parent="."]
oversampling_override = 1.0
initial_position = 1
size = Vector2i(300, 143)

[node name="quest_checker" type="VBoxContainer" parent="AcceptDialog"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.0
offset_top = -63.5
offset_right = 142.0
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("4_ecn0k")

[node name="quest_check_title" type="Label" parent="AcceptDialog/quest_checker"]
layout_mode = 2
text = "Quest var check"
horizontal_alignment = 1

[node name="quest_request" type="LineEdit" parent="AcceptDialog/quest_checker"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("7_hkl2t")
placeholder_text = "Type a quest variable here"

[node name="result_lbl" type="Label" parent="AcceptDialog/quest_checker"]
modulate = Color(1, 0, 1, 1)
layout_mode = 2
text = "Result: NaN"
horizontal_alignment = 1

[node name="teleport_window" type="ConfirmationDialog" parent="."]
editor_description = "Test"
canvas_item_default_texture_filter = 0
oversampling_override = 1.0
title = "Teleport to..."
initial_position = 1
size = Vector2i(384, 240)
exclusive = false
extend_to_title = true
maximize_disabled = false
content_scale_mode = 2
content_scale_aspect = 1
content_scale_stretch = 1
ok_button_text = "Teleport"
script = ExtResource("8_ir2hf")

[node name="tree_node" type="Tree" parent="teleport_window"]
offset_left = 8.0
offset_top = 8.0
offset_right = 342.0
offset_bottom = 301.0
column_titles_visible = true
hide_root = true
scroll_horizontal_enabled = false

[node name="input_checker" type="CenterContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_lsfsp")

[node name="PanelContainer" type="PanelContainer" parent="input_checker"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="input_checker/PanelContainer"]
layout_mode = 2

[node name="RichTextLabel" type="Label" parent="input_checker/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Input Checker"
label_settings = SubResource("LabelSettings_2n5ny")
horizontal_alignment = 1
vertical_alignment = 1

[node name="button_a" type="Sprite2D" parent="input_checker/PanelContainer/VBoxContainer"]
position = Vector2(58, 42)
texture = ExtResource("11_hgrbu")

[node name="button_b" type="Sprite2D" parent="input_checker/PanelContainer/VBoxContainer"]
position = Vector2(77, 42)
texture = ExtResource("12_27myr")

[node name="button_x" type="Sprite2D" parent="input_checker/PanelContainer/VBoxContainer"]
position = Vector2(96, 43)
texture = ExtResource("13_qyn30")

[node name="button_y" type="Sprite2D" parent="input_checker/PanelContainer/VBoxContainer"]
position = Vector2(117, 43)
texture = ExtResource("14_x2v0w")

[node name="button_lb" type="Sprite2D" parent="input_checker/PanelContainer/VBoxContainer"]
position = Vector2(55, 67)
texture = ExtResource("15_u28q3")

[node name="button_rb" type="Sprite2D" parent="input_checker/PanelContainer/VBoxContainer"]
position = Vector2(90, 67)
texture = ExtResource("16_38kdx")

[node name="button_lt" type="Sprite2D" parent="input_checker/PanelContainer/VBoxContainer"]
position = Vector2(57, 84)
texture = ExtResource("17_tvar4")

[node name="analog_right" type="Sprite2D" parent="input_checker/PanelContainer/VBoxContainer"]
position = Vector2(22, 41)
texture = ExtResource("18_nykp6")

[node name="analog_left" type="Sprite2D" parent="input_checker/PanelContainer/VBoxContainer"]
position = Vector2(22, 81)
texture = ExtResource("19_mubt8")

[node name="button_rt" type="Sprite2D" parent="input_checker/PanelContainer/VBoxContainer"]
position = Vector2(78, 84)
texture = ExtResource("20_2nwji")

[node name="button_select" type="Sprite2D" parent="input_checker/PanelContainer/VBoxContainer"]
position = Vector2(112, 90)
texture = ExtResource("21_d8etw")

[node name="button_start" type="Sprite2D" parent="input_checker/PanelContainer/VBoxContainer"]
position = Vector2(133, 90)
texture = ExtResource("22_yvkhc")

[node name="arrow_up" type="Sprite2D" parent="input_checker/PanelContainer/VBoxContainer"]
position = Vector2(161, 32)
texture = ExtResource("23_hnck4")

[node name="arrow_right" type="Sprite2D" parent="input_checker/PanelContainer/VBoxContainer"]
position = Vector2(174, 45)
texture = ExtResource("24_26ris")

[node name="arrow_down" type="Sprite2D" parent="input_checker/PanelContainer/VBoxContainer"]
position = Vector2(162, 61)
texture = ExtResource("25_nm5g3")

[node name="arrow_left" type="Sprite2D" parent="input_checker/PanelContainer/VBoxContainer"]
position = Vector2(148, 45)
texture = ExtResource("26_13kru")

[node name="input_name" type="Label" parent="input_checker/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 10

[node name="input_name2" type="Label" parent="input_checker/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 10

[node name="input_type" type="Label" parent="input_checker/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 10
text = "GAMEPAD"
label_settings = SubResource("LabelSettings_uokvk")

[connection signal="visibility_changed" from="player_data" to="player_data" method="_on_visibility_changed"]
[connection signal="pressed" from="player_vars/MarginContainer/VBoxContainer/teleport_btn" to="." method="_on_button_pressed"]
[connection signal="visibility_changed" from="player_vars/MarginContainer/VBoxContainer/money" to="player_vars/MarginContainer/VBoxContainer/money" method="_on_visibility_changed"]
[connection signal="pressed" from="player_vars/MarginContainer/VBoxContainer/money/plus" to="player_vars/MarginContainer/VBoxContainer/money" method="_on_plus_pressed"]
[connection signal="pressed" from="player_vars/MarginContainer/VBoxContainer/money/minus" to="player_vars/MarginContainer/VBoxContainer/money" method="_on_minus_pressed"]
[connection signal="pressed" from="player_vars/MarginContainer/VBoxContainer/maps/get_app" to="player_vars/MarginContainer/VBoxContainer/maps" method="_on_get_app_pressed"]
[connection signal="pressed" from="player_vars/MarginContainer/VBoxContainer/notes/get_app" to="player_vars/MarginContainer/VBoxContainer/notes" method="_on_get_app_pressed"]
[connection signal="text_submitted" from="player_vars/MarginContainer/VBoxContainer/time/HBoxContainer/LineEdit" to="player_vars/MarginContainer/VBoxContainer/time" method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="player_vars/MarginContainer/VBoxContainer/time/HBoxContainer/set_btn" to="player_vars/MarginContainer/VBoxContainer/time" method="_on_set_btn_pressed"]
[connection signal="pressed" from="player_vars/MarginContainer/VBoxContainer/items/item_btn" to="player_vars/MarginContainer/VBoxContainer/items" method="_on_stat_btn_pressed"]
[connection signal="pressed" from="player_vars/MarginContainer/VBoxContainer/stat/g_btn" to="player_vars/MarginContainer/VBoxContainer/stat" method="_on_g_btn_pressed"]
[connection signal="pressed" from="player_vars/MarginContainer/VBoxContainer/stat/l_btn" to="player_vars/MarginContainer/VBoxContainer/stat" method="_on_l_btn_pressed"]
[connection signal="pressed" from="player_vars/MarginContainer/VBoxContainer/stat/a_btn" to="player_vars/MarginContainer/VBoxContainer/stat" method="_on_a_btn_pressed"]
[connection signal="pressed" from="player_vars/MarginContainer/VBoxContainer/stat/m_btn" to="player_vars/MarginContainer/VBoxContainer/stat" method="_on_m_btn_pressed"]
[connection signal="pressed" from="player_vars/MarginContainer/VBoxContainer/stat/p_btn" to="player_vars/MarginContainer/VBoxContainer/stat" method="_on_p_btn_pressed"]
[connection signal="pressed" from="player_vars/MarginContainer/VBoxContainer/camera_data/cam_btn" to="player_vars/MarginContainer/VBoxContainer/camera_data" method="_on_cam_btn_pressed"]
[connection signal="pressed" from="player_vars/MarginContainer/VBoxContainer/gun_gen" to="player_vars/MarginContainer/VBoxContainer/gun_gen" method="_on_pressed"]
[connection signal="pressed" from="player_vars/MarginContainer/VBoxContainer/gun_gen2" to="player_vars/MarginContainer/VBoxContainer/gun_gen2" method="_on_pressed"]
[connection signal="text_submitted" from="AcceptDialog/quest_checker/quest_request" to="AcceptDialog/quest_checker" method="_on_quest_request_text_submitted"]
[connection signal="canceled" from="teleport_window" to="teleport_window" method="_on_canceled"]
[connection signal="confirmed" from="teleport_window" to="teleport_window" method="_on_confirmed"]
[connection signal="item_activated" from="teleport_window/tree_node" to="teleport_window" method="_on_tree_node_item_activated"]
[connection signal="visibility_changed" from="input_checker" to="input_checker" method="_on_visibility_changed"]
